:recycle: Reorganize browser tests for lisk-api-client

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,7 @@
 			"error",
 			{
 				"devDependencies": ["test/**"],
-				"optionalDependencies": false,
-				"packageDir": "./"
+				"optionalDependencies": false
 			}
 		]
 	}
