--- a/packages/lisk-api-client/.eslintrc.json
+++ b/packages/lisk-api-client/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-	"extends": ["../../.eslintrc.json"]
+	"extends": ["../../.eslintrc.json"],
+	"globals": {
+		"mocha": true,
+		"document": true
+	}
 }
