--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,7 @@
 		"import/no-extraneous-dependencies": [
 			"error",
 			{
-				"devDependencies": ["test/**"],
+				"devDependencies": true,
 				"optionalDependencies": false
 			}
 		]
