--- a/packages/lisk-api-client/.eslintrc.json
+++ b/packages/lisk-api-client/.eslintrc.json
@@ -1,7 +1,3 @@
 {
-	"extends": ["../../.eslintrc.json"],
-	"globals": {
-		"mocha": true,
-		"document": true
-	}
+	"extends": ["../../.eslintrc.json"]
 }
