:recycle: Fix print result and update tests

--- a/package.json
+++ b/package.json
@@ -55,7 +55,10 @@
 		"bin": "lisk",
 		"plugins": [
 			"@oclif/plugin-help"
-		]
+		],
+		"topics": {
+			"config": { "description": "manage lisk-commander config variables" }
+		}
 	},
 	"files": [
 		"/bin",
