--- a/packages/lisk-api-client/package.json
+++ b/packages/lisk-api-client/package.json
@@ -69,6 +69,7 @@
 	"devDependencies": {
 		"babel-cli": "6.26.0",
 		"babel-plugin-istanbul": "4.1.6",
+		"babel-plugin-module-resolver": "3.1.1",
 		"babel-plugin-transform-runtime": "6.23.0",
 		"babel-preset-env": "1.6.1",
 		"babel-register": "6.26.0",
