:recycle: reorganize symlink structure & scripts for all packages

--- a/.gitignore
+++ b/.gitignore
@@ -56,8 +56,7 @@ tmp
 dist/
 dist-node/
 dist-browser/
-**/browsertest/browsertest.js
-**/browsertest/browsertest.min.js
+browsertest.build/
 
 # Unsupported lock files
 yarn.lock
