--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 		"lint": "lerna run lint",
 		"lint:fix": "lerna run lint:fix",
 		"test": "lerna run test",
+		"test:node": "lerna run test:node",
+		"test:browser": "lerna run --concurrency 1 test:browser",
 		"build": "lerna run build",
 		"cover": "lerna run cover",
 		"postinstall": "npm run bootstrap",
