--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
 	"private": true,
 	"version": "1.0.0-rc.0",
 	"description": "Reusable packages for use with the Lisk ecosystem",
-	"author":
-		"Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
+	"author": "Lisk Foundation <admin@lisk.io>, lightcurve GmbH <admin@lightcurve.io>",
 	"license": "GPL-3.0",
-	"keywords": ["lisk", "blockchain"],
+	"keywords": [
+		"lisk",
+		"blockchain"
+	],
 	"homepage": "https://github.com/LiskHQ/lisk-elements#readme",
 	"repository": {
 		"type": "git",
