--- a/packages/lisk-api-client/package.json
+++ b/packages/lisk-api-client/package.json
@@ -42,10 +42,10 @@
 		"test:node":
 			"npm run build:check && BABEL_ENV=buildcheck mocha test --compilers js:babel-register --recursive",
 		"pretest:browser":
-			"npm run build:browsertest && http-server -p 8080 browsertest &",
+			"npm run build:browsertest && http-server -p 11541 browsertest &",
 		"test:browser":
-			"wait-on http://localhost:8080 && cypress run --env ROOT_DIR=\"${PWD##*/}\" && echo 'test-finished'",
-		"posttest:browser": "echo 'posttest' && kill $(lsof -t -i:8080)",
+			"wait-on http://localhost:11541 && cypress run --env ROOT_DIR=\"${PWD##*/}\" && echo 'test-finished'",
+		"posttest:browser": "echo 'posttest' && kill $(lsof -t -i:11541)",
 		"cover":
 			"if [ -z $JENKINS_HOME ]; then npm run cover:local; else npm run cover:ci; fi",
 		"cover:base": "NODE_ENV=test nyc report",
@@ -59,7 +59,8 @@
 		"build:node": "npm run transpile",
 		"prebuild:browser":
 			"rm ./dist-browser/index.js ./dist-browser/index.min.js | echo",
-		"build:browser": "npm run browserify && npm run uglify",
+		"build:browser":
+			"npm run build:node && npm run browserify && npm run uglify",
 		"prebuild": "npm run prebuild:node && npm run prebuild:browser",
 		"build": "npm run build:node && npm run build:browser",
 		"build:check": "node -e \"require('./dist-node')\"",
