--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"lint:fix": "lerna run lint:fix",
 		"test": "lerna run test",
 		"test:node": "lerna run test:node",
-		"test:browser": "lerna run --concurrency 1 test:browser",
+		"test:browser": "lerna run test:browser",
 		"build": "lerna run build",
 		"build:browsertest": "lerna run build:browsertest",
 		"cover": "lerna run cover",
