--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "babel-runtime": "=6.26.0",
     "bip39": "=2.4.0",
     "browserify-bignum": "=1.3.0-2",
+    "buffer-reverse": "=1.0.1",
     "ed2curve": "=0.2.1",
     "tweetnacl": "=1.0.0",
     "varuint-bitcoin": "=1.1.0"
