--- a/packages/lisk-transactions/package.json
+++ b/packages/lisk-transactions/package.json
@@ -58,6 +58,7 @@
 	},
 	"dependencies": {
 		"ajv": "6.5.2",
+		"ajv-merge-patch": "4.1.0",
 		"browserify-bignum": "1.3.0-2",
 		"js-nacl": "LiskHQ/js-nacl#6dc1417",
 		"lisk-constants": "0.5.1",
