--- a/.gitignore
+++ b/.gitignore
@@ -52,9 +52,8 @@ jspm_packages
 tmp
 
 # Distribution folders
-dist-browser/*.js
-dist-browser/*.json
-dist-node
+dist-browser/
+dist-node/
 
 # Built test files
 browsertest/package.json
