--- a/packages/lisk-elements/package.json
+++ b/packages/lisk-elements/package.json
@@ -45,9 +45,9 @@
 		"test:node":
 			"npm run build:check && BABEL_ENV=buildcheck mocha test --compilers js:babel-register --recursive",
 		"serve:start": "http-server -p 11540 ./browsertest &",
-		"serve:stop": "kill $(lsof -t -i:11540)",
+		"serve:stop": "kill $(lsof -t -i:11540) || true",
 		"pretest:browser":
-			"npm run serve:stop | npm run build:browsertest && npm run serve:start",
+			"npm run serve:stop && npm run build:browsertest && npm run serve:start",
 		"test:browser":
 			"wait-on http://localhost:11540 && cypress run --config baseUrl=http://localhost:11540 --env ROOT_DIR=\"${PWD##*/}\"",
 		"posttest:browser": "npm run serve:stop",
@@ -60,10 +60,10 @@
 			"npm run transpile:browsertest && npm run browserify:browsertest && npm run uglify:browsertest",
 		"postbuild:browsertest":
 			"rm -r browsertest.build/src browsertest.build/test",
-		"prebuild:node": "rm -r dist-node/* || mkdir dist-node | echo",
+		"prebuild:node": "rm -r dist-node/* || mkdir dist-node || true",
 		"build:node": "npm run transpile",
 		"prebuild:browser":
-			"rm ./dist-browser/index.js ./dist-browser/index.min.js | echo",
+			"rm ./dist-browser/index.js ./dist-browser/index.min.js || true",
 		"build:browser":
 			"npm run build:node && npm run browserify && npm run uglify",
 		"prebuild": "npm run prebuild:browser",
