--- a/.prettierignore
+++ b/.prettierignore
@@ -1,9 +1,1 @@
-package.json
-
-.nyc_output/
-coverage/
-dist/
-node_modules/
-
-# BUG: See https://github.com/prettier/prettier/issues/3223
-docs/CONTRIBUTING.md
+./templates/.prettierignore.tmpl
