--- a/packages/lisk-api-client/package.json
+++ b/packages/lisk-api-client/package.json
@@ -70,7 +70,7 @@
 			"npm run lint && npm test && npm run build && npm run build:check"
 	},
 	"dependencies": {
-		"axios": "=0.18.0",
+		"axios": "0.18.0",
 		"lisk-constants": "0.5.1"
 	},
 	"devDependencies": {
