Set db user in default config to 'lisk'

--- a/config/default/config.json
+++ b/config/default/config.json
@@ -13,7 +13,7 @@
 		"host": "localhost",
 		"port": 5432,
 		"database": "",
-		"user": "",
+		"user": "lisk",
 		"password": "password",
 		"min": 10,
 		"max": 95,
