--- a/package.json
+++ b/package.json
@@ -57,8 +57,11 @@
 			"@oclif/plugin-help"
 		],
 		"topics": {
+			"help": { "description": "Displays help for Lisk Commander." },
+			"warranty": { "description": "Displays warranty notice for Lisk Commander." },
+			"copyright": { "description": "Displays copyright notice for Lisk Commander." },
 			"config": { "description": "Manages Lisk Commander configuration." },
-			"account": { "description": "Manages account." }
+			"account": { "description": "Manages Lisk accounts." }
 		}
 	},
 	"files": [
