--- a/package.json
+++ b/package.json
@@ -57,11 +57,21 @@
 			"@oclif/plugin-help"
 		],
 		"topics": {
-			"account": { "description": "Manages Lisk accounts." },
-			"config": { "description": "Manages Lisk Commander configuration." },
-			"copyright": { "description": "Displays copyright notice." },
-			"help": { "description": "Displays help." },
-			"warranty": { "description": "Displays warranty notice." }
+			"account": {
+				"description": "Manages Lisk accounts."
+			},
+			"config": {
+				"description": "Manages Lisk Commander configuration."
+			},
+			"copyright": {
+				"description": "Displays copyright notice."
+			},
+			"help": {
+				"description": "Displays help."
+			},
+			"warranty": {
+				"description": "Displays warranty notice."
+			}
 		}
 	},
 	"files": [
