:white_check_mark: Update test phrases and add package topic desc

--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
 			"account": {
 				"description": "Manages Lisk accounts."
 			},
+			"block": {
+				"description": "Manages Lisk blocks."
+			},
 			"config": {
 				"description": "Manages Lisk Commander configuration."
 			},
