:recycle: Update package.json and test

--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
 			"copyright": {
 				"description": "Displays copyright notice."
 			},
+			"delegate": {
+				"description": "Manages Lisk delegates."
+			},
 			"help": {
 				"description": "Displays help."
 			},
