--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
 	"wsPort": 8001,
 	"httpPort": 8000,
 	"address": "0.0.0.0",
-	"version": "0.9.8",
-	"minVersion": ">=0.9.5",
+	"version": "1.0.0-rc.2",
+	"minVersion": ">=1.0.0-rc.2",
 	"fileLogLevel": "info",
 	"logFileName": "logs/lisk.log",
 	"consoleLogLevel": "none",
