:arrow_up: Update lisk-elements to v1.0.0-rc.1

--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
 		"ip": "=1.1.5",
 		"js-yaml": "=3.10.0",
 		"json-refs": "=3.0.3",
-		"lisk-elements": "=1.0.0-beta.4",
+		"lisk-elements": "=1.0.0-rc.1",
 		"lodash": "=4.17.4",
 		"method-override": "=2.3.10",
 		"pg-monitor": "=0.9.0",
