--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ Session.vim
 
 # Config files
 sftp-config.json
-test/network/pm2.integration.json
+test/network/pm2.network.json
 !test/network/configs/config.non-forge.json
 test/network/configs/
 
